recursion.logo.lessons.recursion.logo.square.FourSquare.scala.error
FourSquare:22: error: Missing closing brace `}' assumed here
}
^